--- a/src/common/style/theme/light.scss
+++ b/src/common/style/theme/light.scss
@@ -247,7 +247,7 @@ html[data-theme='light'] {
   --app-tags-item-bg: #ffffff;
   --app-tags-item-active-bg: #f59e0b;              // 黄色激活
   --app-tags-item-active-text: #ffffff;
-  --app-tags-border: #fde68a;
+  --app-tags-border: #ffffff;
 
   // 表格
   --app-table-header-bg: #fffbeb;                  // 浅黄表头
