--- a/src/common/style/theme/light.scss
+++ b/src/common/style/theme/light.scss
@@ -49,7 +49,7 @@ html[data-theme='light'] {
   --el-color-info-dark-2: #73767a;
 
   // 基础色
-  --el-color-white: #ffffff;
+  --el-color-white: #9c9898;
   --el-color-black: #000000;
 
   // ==================== 文字颜色 ====================
